--- a/full-desktop-markup.html
+++ b/full-desktop-markup.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
       href="https://fonts.googleapis.com/css?family=Lora|Ubuntu:400,700&display=swap"
       rel="stylesheet"
